--- a/src/components/RepoBox/RepoBox.css
+++ b/src/components/RepoBox/RepoBox.css
@@ -15,18 +15,26 @@
     font-size: 30px;
 }
 a{
+  text-decoration: none;
+}
+.text-list{
     color: black;
     text-decoration: none;
+    padding: 10px;
+    border: 0;
+    margin: 0;
+    text-align: center;
 }
-a:hover{
+.text-list:hover{
+    background-color: black;
     color: orange;
 }
 
 @media only screen and (max-device-width: 480px) {
-    .inline{
-      display: block;
-      width: 95%;
-      margin: auto;
-     }
-   
-   }
+ .inline{
+   display: block;
+   width: 95%;
+   margin:0 auto;
+  }
+
+}
